--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
    <div class="popup hide">
        <p id="message">Sample Message</p>
-       <button id="new-game">New Game</button>er>
+       <button id="new-game">New Game</button>made by harsh
    </div>
 <div class="footer-basic">
         <footer>
