--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
    <div class="popup hide">
        <p id="message">Sample Message</p>
-       <button id="new-game">New Game</button>made by harsh
+       <button id="new-game">New Game</button><h6>Made by harsh</h6>
    </div>
 <div class="footer-basic">
         <footer>
-            <p class="copyright"><u><i>Made by Harsh Chaudhary</p>
+            <p class="copyright"><u><i>Tic Tac Toe Game</p>
         </footer>
     </div>
    
